--- a/lesson_5/css/style.css
+++ b/lesson_5/css/style.css
@@ -9,6 +9,31 @@ body {
 	font-size: 14px;
 	line-height: 1.79;
 	color: #6C757D;
+	font-weight: 300;
+}
+
+.wrapper {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	overflow: hidden;
+	flex-direction: column;
+	min-height: 100%;
+}
+
+._ibg {
+	position: relative;
+}
+
+._ibg img {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	object-fit: cover;
 }
 
 [class*="__container"] {
@@ -17,24 +42,246 @@ body {
 	padding: 0 15px;
 }
 
-[class*="__text"] {
+/* =============================== */
+@media (max-width: 1269.98px) {
+	[class*="__container"] {
+		max-width: 970px;
+	}
+}
+
+@media (max-width: 990.98px) {
+	[class*="__container"] {
+		max-width: 750px;
+	}
+}
+
+@media (max-width: 767.98px) {
+	[class*="__container"] {
+		max-width: none;
+	}
+}
+/* ================================ */
+
+
+/* =========== HEADER ========= */
+
+.header {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	z-index: 50;
+}
+
+.header__container {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	gap: 10px;
+	justify-content: space-between;
+	align-items: center;
+	min-height: 96px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
+.header__logo {
+	font-weight: 700;
+	font-size: 18px;
+	line-height: 1.39;
+	color: #F8F9FA;
+	text-transform: uppercase;
+}
+
+.header__logo span {
+	display: inline-block;
+	width: 5px;
+	height: 5px;
+	border-radius: 50%;
+	background-color: #DDBEA9;
+}
+
+.menu__list {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	flex-wrap: wrap;
+	row-gap: 5px;
+	position: relative;
+}
+
+
+.menu__link {
+	font-weight: 500;
+	font-size: 12px;
+	line-height: 2.08;
+	color: rgba(248, 249, 250, 0.5);
+	text-transform: capitalize;
+	position: relative;
+}
+
+.menu__item {
+	margin-right: 20px;
+	border-bottom: 2px solid transparent;
+}
+
+.item__border {
+	position: relative;
+	margin-right: 50px;
+}
+
+.item__border:after {
+	content: '';
+	width: 1px;
+	height: 25px;
+	position: absolute;
+	background-color: rgba(229, 229, 229, 0.5);
+	right: -25px;
+}
+
+.link__search img {
+	vertical-align: middle;
+}
+
+
+.menu__link:hover {
+	border-bottom: 2px solid #DDBEA9;
+	transition: all 0.1s ease 0s;
+	-webkit-transition: all 0.1s ease 0s;
+	-moz-transition: all 0.1s ease 0s;
+	-ms-transition: all 0.1s ease 0s;
+	-o-transition: all 0.1s ease 0s;
+}
+
+.item__row {
+	margin-right: 38px;
+}
+
+.row::after {
+	content: '';
+	position: absolute;
+	width: 18px;
+	height: 9px;
+	background: url("../img/icon/Vector.svg") 8px no-repeat;
+	top: 4px;
+	right: -16px;
+}
+
+.sub-menu {
+	display: none;
+	width: 136px;
+	height: 170px;
+	background: #212529;
+	border-radius: 5px;
+	padding: 20px;
+	font-weight: 500;
+	font-size: 12px;
+	line-height: 2.08;
+	color: rgba(248, 249, 250, 0.6);
+}
+
+.sub-menu li {
+	padding-bottom: 10px;
+}
+
+.sub-menu li:hover {
+	color: #F8F9FA;
+	transition: all .3s;
+}
+
+/* =========== HEADER END ========= */
+
+
+/* =========== PAGE ========= */
+
+.page {
+	flex: 1 1 auto;
+}
+
+.main-block {
+	position: relative;
+}
+
+.main-block__image {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+}
+
+.main-block__body {
+	padding: 225px 0px 125px 0px;
+	position: relative;
+	z-index: 2;
+}
+
+.main-block-title {
+	font-weight: 700;
+	font-size: 25px;
+	line-height: 1.6;
+	text-align: center;
+	color: #F8F9FA;
+	text-transform: capitalize;
+	max-width: 545px;
+	margin: 15px auto;
+}
+
+.main-block-text {
+	font-size: 12px;
+	line-height: 1.66;
+	text-align: center;
+	color: #E5E5E5;
+}
+
+.main-block-text span {
+	margin-left: 10px;
+}
+
+/* =========== PAGE END ========= */
+
+
+/* =========== STORY PAGE ========= */
+
+
+.story__text,
+.footer__text {
 	max-width: 814px;
 	margin: 0 auto;
 }
 
-.header {
-	padding-top: 40px;
-}
-
 .header,
 .main,
-.main__content .content__text,
+.page,
 .indent {
 	margin-bottom: 80px;
 }
 
-.footer {
-	padding-bottom: 60px;
+.main-block {
+	margin-bottom: 115px;
+}
+
+.story__autor {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	column-gap: 25px;
+}
+
+.story__autor p {
+	font-size: 12px;
+	line-height: 1.66;
+	margin-bottom: 15px;
+}
+
+.text__author {
+	font-weight: 700;
 }
 
 h2 {
@@ -53,7 +300,7 @@ h2 {
 	max-width: 605px;
 }
 
-.content__text p {
+.story__text > p {
 	margin-bottom: 24px;
 }
 
@@ -61,16 +308,189 @@ p.null {
 	margin-bottom: 0;
 }
 
-img {
+.story__img img {
 	border-radius: 5px;
 }
 
-.content__img {
+.story__img {
 	font-size: 0;
+	margin-bottom: 80px;
 }
 
 .img {
 	margin-right: 30px;
 }
 
+.story__list {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	font-weight: 700;
+	font-size: 8px;
+	line-height: 2.5;
+	text-transform: uppercase;
+}
+
+.story__links {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	column-gap: 15px;
+}
+
+.link-up {
+	position: relative;
+}
+
+.link-up::before {
+	content: '';
+	position: absolute;
+	background: url("../img/icon/software-upload.svg") no-repeat;
+	width: 16px;
+	height: 12px;
+	top: 1px;
+	left: -16px;
+}
+
+.bottom__text .null {
+	margin-bottom: 60px;
+}
+
+.story__link {
+	border: 1px solid #C4C4C4;
+	border-radius: 3px;
+	padding: 6px 13px;
+	transition: all 0.3s ease 0s;
+	-webkit-transition: all 0.3s ease 0s;
+	-moz-transition: all 0.3s ease 0s;
+	-ms-transition: all 0.3s ease 0s;
+	-o-transition: all 0.3s ease 0s;
+}
+
+.story__link:hover {
+	background-color: #8cbded;
+}
+
+.page__story {
+	margin-bottom: 98px;
+}
+
+/* =========== STORY PAGE END ========= */
+
+/* =================== ARTICLES =================== */
+
+.page__articles {
+	background: rgba(94, 94, 94, 0.05);
+	padding: 100px 0;
+}
+
+.articles__title {
+	font-weight: 500;
+	font-size: 25px;
+	line-height: 0.8;
+	color: #495057;
+	margin-bottom: 60px;
+}
+
+.articles__body {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	justify-content: space-between;
+	column-gap: 30px;
+}
+
+.card__article {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+}
+.card__img {
+	min-width: 181px;
+	margin-right: 30px;
+}
+
+.card__img img {
+	max-width: 100%;
+}
+
+.card__title {
+	font-weight: 300;
+	font-size: 12px;
+	line-height: 1.66;
+	color: #495057;	
+	word-spacing: 15px;
+	margin-bottom: 15px;
+}
+
+.card__text {
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 1.56;
+	color: #212529;
+}
+
+/* =================== ARTICLES END =================== */
+
+/* =================== FOOTER =================== */
+
+.footer {
+	background: #212529;
+	padding: 100px 0;
+}
+
+.footer__top {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	justify-content: space-between;
+	border-bottom: 1px solid rgba(229, 229, 229, 0.2);
+	padding-bottom: 40px;
+	margin-bottom: 40px;
+}
+
+.top__something,
+.top__about {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	column-gap: 25px;
+}
+
+.footer__bottom {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	justify-content: space-between;
+}
+
+.footer a {
+	transition: all 0.3s ease 0s;
+	-webkit-transition: all 0.3s ease 0s;
+	-moz-transition: all 0.3s ease 0s;
+	-ms-transition: all 0.3s ease 0s;
+	-o-transition: all 0.3s ease 0s;
+}
+
+.footer a:hover {
+	color:#9ec0e2;
+}
+
+/* =================== FOOTER END =================== */
 
