--- a/lesson_8/css/style.css
+++ b/lesson_8/css/style.css
@@ -247,6 +247,13 @@
 }
 
 .unorder__body ul {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 	min-width: 309px;
 }
 
@@ -255,37 +262,73 @@
 }
 
 .unorder__body li {
-	padding-left: 30px;
 	font-size: 16px;
 	line-height: 1.3;
 	margin-bottom: 20px;
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	align-items: center;
+	transition: all 0.3s ease 0s;
+	-webkit-transition: all 0.3s ease 0s;
+	-moz-transition: all 0.3s ease 0s;
+	-ms-transition: all 0.3s ease 0s;
+	-o-transition: all 0.3s ease 0s;
 }
 
-.dot__list li {
-	line-height: 0.94;
-	padding-left: 18px;
-	margin-bottom: 18px;
-	background: url("../img/icon/Ellipse.svg") 0 4px / 8px no-repeat;
+.unorder__body li::before {
+	width: 20px;
+	height: 19px;
+	margin-right: 10px;
+	display: inline-block;
+	transition: all 0.3s ease 0s;
+	-webkit-transition: all 0.3s ease 0s;
+	-moz-transition: all 0.3s ease 0s;
+	-ms-transition: all 0.3s ease 0s;
+	-o-transition: all 0.3s ease 0s;
 }
 
-.blue__list li {
-	background: url("../img/icon/checkmark-circle.svg") 0 / contain no-repeat;
+.dot__list li::before {
+	content: '';
+	background: url("../img/icon/Ellipse.svg") 0 no-repeat;
+	width: 8px;
+	height: 12px;
 }
 
-.green__list li {
-	background: url('../img/icon/green-circle.svg') 0 / contain no-repeat;
+.blue__list li::before {
+	content: '';
+	background: url("../img/icon/checkmark-circle.svg") 0 no-repeat;
 }
 
-.red__list li {
-	background: url('../img/icon/red-circle.svg') 0 / contain no-repeat;
+.green__list li::before {
+	content: '';
+	background: url('../img/icon/green-circle.svg') 0 no-repeat;
 }
 
-.arrow__list li {
-	background: url('../img/icon/arrow.svg') 0 / contain no-repeat;
+.red__list li::before {
+	content: '';
+	background: url('../img/icon/red-circle.svg') 0  no-repeat;
 }
 
-.star__list li {
-	background: url('../img/icon/star.svg') 0 / contain no-repeat;
+.arrow__list li::before {
+	content: '';
+	background: url('../img/icon/arrow.svg') 0 no-repeat;
+}
+
+.star__list li::before {
+	content: '';
+	background: url('../img/icon/star.svg') 0  no-repeat;
+}
+
+.unorder__body li:hover {
+	color: #1ebdc5;
+	cursor: pointer;
+}
+
+.unorder__body li:hover::before {
+	transform: scale(1.3);
 }
 
 
