--- a/lesson_14/css/style.css
+++ b/lesson_14/css/style.css
@@ -15,7 +15,7 @@ body {
 [class*=__container] {
 	max-width: 1270px;
 	padding: 0 15px;
-	margin:  0 auto;
+	margin: 0 auto;
 }
 
 .wrapper {
@@ -46,7 +46,7 @@ body {
 
 .header__link {
 	font-weight: 500;
-	line-height: 25px;
+	line-height: 2.08;
 	transition: all 0.3s ease 0s;
 	-webkit-transition: all 0.3s ease 0s;
 	-moz-transition: all 0.3s ease 0s;
@@ -55,10 +55,6 @@ body {
 }
 
 .header__link:hover {
-	color: #c8dbd9d2;
-}
-
-.header__link_color {
 	color: rgba(73, 80, 87, 0.5);
 }
 
@@ -85,7 +81,7 @@ body {
 	gap: 20px;
 }
 
-.box {
+.card {
 	display: -webkit-flex;
 	display: -moz-flex;
 	display: -ms-flex;
@@ -96,35 +92,20 @@ body {
 	row-gap: 45px;
 }
 
-.box__title {
-	font-weight: 700;
-	font-size: 24px;
-	line-height: 1.6;
-	color: #212529;
-}
-
-.box__img {
-	margin-bottom: 30px;
-}
-
-.box__date,
-.box__title,
-.box__text	{
-	margin-bottom: 15px;
-}
-
-.box__text {
-	border-bottom: 1px solid #E5E5E5;
-	padding-bottom: 15px;
-}
-
-.box__body {
+.card__column {
+	display: flex;
 	flex: 0 0 33.333%;
 	padding: 0px 15px;
 	position: relative;
 }
 
-.box__link {
+.card__item {
+	display: flex;
+	flex-direction: column;
+	min-height: 100%;
+}
+
+.card__link {
 	background: rgba(33, 37, 41, 0.3);
 	border-radius: 3px;
 	text-transform: uppercase;
@@ -136,6 +117,7 @@ body {
 	position: absolute;
 	top: 30px;
 	right: 50px;
+	z-index: 3;
 	transition: all 0.3s ease 0s;
 	-webkit-transition: all 0.3s ease 0s;
 	-moz-transition: all 0.3s ease 0s;
@@ -143,8 +125,70 @@ body {
 	-o-transition: all 0.3s ease 0s;
 }
 
-.box__link:hover {
+.card__link:hover {
 	background-color: rgba(148, 236, 238, 0.301);
+}
+
+.card__img {
+	position: relative;
+	overflow: hidden;
+	margin-bottom: 30px;
+}
+
+.card__img::before {
+	content: "";
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background-color: black;
+	border-radius: 3px;
+	opacity: 0.4;
+	transition: all 1s ease 0s;
+	-webkit-transition: all 1s ease 0s;
+	-moz-transition: all 1s ease 0s;
+	-ms-transition: all 1s ease 0s;
+	-o-transition: all 1s ease 0s;
+	z-index: 2;
+}
+
+.card__img:hover::before {
+	opacity: 0;
+}
+
+.card__img img {
+	max-width: 100%;
+	transition: all 1s ease 0s;
+	-webkit-transition: all 1s ease 0s;
+	-moz-transition: all 1s ease 0s;
+	-ms-transition: all 1s ease 0s;
+	-o-transition: all 1s ease 0s;
+}
+
+.card__img:hover img {
+	transform: scale(1.1);
+}
+
+.card__content {
+	display: flex;
+	flex-direction: column;
+	border-bottom: 1px solid #E5E5E5;
+	padding-bottom: 15px;
+	margin-bottom: 15px;
+	flex-grow: 1;
+	gap: 15px;
+}
+
+.card__title {
+	font-weight: 700;
+	font-size: 24px;
+	line-height: 1.6;
+	color: #212529;
+}
+
+.footer {
+	padding-bottom: 100px;
 }
 
 .footer__container {
@@ -169,10 +213,6 @@ body {
 
 .footer__link:hover {
 	background-color: rgb(97, 97, 97);
-}
-
-.footer {
-	margin-bottom: 100px;
 }
 
 
