--- a/lesson_16/css/style.css
+++ b/lesson_16/css/style.css
@@ -117,7 +117,6 @@ textarea:focus::placeholder {
 	color: #FFFFFF;
 	background-color: #000000;
 	padding: 14.5px 42.5px;
-	margin-right: 25px;
 	transition: background-color 0.3s ease 0s;
 	-webkit-transition: background-color 0.3s ease 0s;
 	-moz-transition: background-color 0.3s ease 0s;
@@ -127,6 +126,10 @@ textarea:focus::placeholder {
 
 .button:hover {
 	background-color: #8b8181;
+}
+
+.button__indent {
+	margin-right: 25px;
 }
 
 .account__link {
@@ -307,7 +310,7 @@ textarea:focus::placeholder {
 	color: #637381;
 }
 
-.billing {
+.form__billing {
 	margin-bottom: 100px;
 }
 
@@ -343,14 +346,14 @@ textarea:focus::placeholder {
 
 .billing__item {
 	flex: 0 1 48%;
-	border: 1px solid #E7E7E7;
-	border-radius: 7px;
 }
 
 .billing__input,
 .billing__list {
 	width: 100%;
 	padding: 15px 25px;
+	border: 1px solid #E7E7E7;
+	border-radius: 7px;
 }
 
 .billing__input:focus,
