--- a/lesson_19/css/style.css
+++ b/lesson_19/css/style.css
@@ -8,6 +8,7 @@ body {
 	font-family: 'Inter';
 	font-weight: 600;
 	font-size: 16px;
+	line-height: 1.5;
 	color: #637381;
 }
 
@@ -83,7 +84,6 @@ body {
 	top: 30px; 
 	left: 30px; 
 	max-width: 362px;
-	padding: 10px;
 }
 
 .item__teg {
@@ -92,18 +92,23 @@ body {
 	margin-bottom: 12px;
 }
 
-.item__title {
+.title-link {
+	display: inline-block;
 	font-size: 28px;
 	line-height: 1.25;
 	color: #212B36;
 	transition: color 0.3s ease 0s;
 }
 
-.item__title:hover {
+.title-link:hover {
 	color: #42658a;
 }
 
 /* ========================================================= */
+
+.page__collections {
+	margin-bottom: 120px;
+}
 
 .page__lates-products {
 	padding-bottom: 120px;
@@ -231,7 +236,8 @@ body {
 
 .link-image {
 	overflow: hidden;
-	display: inline-block;
+	display: flex;
+	flex-direction: column;
 	position: relative;
 	padding-bottom: 78.38%;
 	border-radius: 6px;
@@ -244,6 +250,7 @@ body {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
+	border-radius: 5px;
 	transition: transform 0.8s ease 0s;
 }
 
@@ -326,6 +333,10 @@ body {
 
 /* ========================================================= */
 
+.page__category {
+	margin-bottom: 120px;
+}
+
 .page__trending-products {
 	padding-bottom: 119px;
 }
@@ -349,14 +360,20 @@ body {
 }
 
 .trending-item__title {
-	margin-bottom: 8px;
+	font-size: 24px;
+	line-height: 30px;
 	display: inline-block;
 	transition: all 0.3s ease 0s;
+}
+
+.trending-item__title {
+	margin-bottom: 8px;
 }
 
 .trending-item__title:hover {
 	color: #6ba6e5;
 }
+
 
 .trending-item__reviews {
 	display: flex;
@@ -375,6 +392,328 @@ body {
 }
 
 /* ========================================================= */
+
+.collections__sub-title {
+	color: #3056D3;
+	text-align: center;
+	margin-bottom: 8px;
+}
+
+.collections__column {
+	display: grid;
+	grid-template-columns: repeat(4 ,1fr);
+	gap: 30px;
+}
+
+.card__image {
+	padding-bottom: 111.112%;
+	margin-bottom: 20px;
+}
+
+.card__cost {
+	font-weight: 700;
+	color: #3056D3;
+}
+
+
+.card__title {
+	font-size: 20px;
+}
+
+.card__body {
+	display: flex;
+	justify-content: space-between;
+	gap: 5px;
+	align-items: flex-start;
+}
+
+/* ========================================================= */
+
+.featured__sub-title {
+	font-size: 18px;
+	line-height: 1.33;
+	text-align: center;
+	color: #3056D3;
+	margin-bottom: 8px;
+}
+
+.featured__column {
+	display: flex;
+   flex-direction: column;
+   gap: 30px;
+}
+
+.featured__wrapper {
+	display: flex;
+	gap: 31px;
+}
+
+.featured-item {
+	flex: 0 1 40%;
+	border: 1px solid #E7E7E7;
+	border-radius: 8px;
+}
+
+.featured__item_size {
+	flex: 0 1 57.094017%;
+}
+
+
+.featured__item_size .featured-item__image {
+	padding-bottom: 52.246%;
+}
+
+.featured-item__image {
+	padding-bottom: 74.573%;
+}
+
+.featured-item__chapter {
+	display: inline-block;
+	font-size: 16px;
+	line-height: 1.5;
+	color: #637381;
+	transition: color 0.3s ease 0s;
+}
+
+.featured-item__chapter:hover {
+	color: #6d9ac1;
+}	
+
+.featured-item__title {
+	display: block;
+}
+
+.featured-item__body {
+	padding: 30px;
+}
+
+.featured__reverse {
+	flex-direction: row-reverse;
+}
+
+.featured-item__content {
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+}
+
+.featured-item__cost {
+	display: flex;
+	gap: 10px;
+}
+
+.featured-item__discount {
+	font-size: 16px;
+	line-height: 1.5;
+	text-align: right;
+	color: #3056D3;
+}
+
+.top-collections__cost {
+	display: flex;
+	gap: 10px;
+	justify-content: center;
+}
+
+.cost__discount {
+	text-decoration: line-through;
+}
+
+.featured-item__chapter-wrapper {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.featured-item__image-wrapper {
+	position: relative;
+}
+
+.featured-item__actions {
+	display: flex;
+	gap: 12px;
+	position: absolute; 
+	bottom: 30px; 
+	left: 30px; 
+}
+
+.actions-item__link {
+	width: 36px;
+	height: 36px;
+	box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.14);
+	border-radius: 4px;
+	transition: background-color 0.3s ease 0s;
+}
+
+.link-basket {
+	background: url('../img/featured-products/icons/basket.svg') center #fff no-repeat;
+}
+
+.link-eye {
+	background: url('../img/featured-products/icons/eye.svg') center #fff no-repeat;
+}
+
+.link-heart {background: url('../img/featured-products/icons/heart.svg') center #fff  no-repeat;
+}
+
+.actions-item__link:hover {
+	background-color: rgb(94, 179, 232);
+}
+
+.page__featured {
+	margin-bottom: 120px;
+}
+
+
+
+/* ========================================================= */
+
+.category__title {
+	text-align: left;
+	display: block;
+}
+
+.category__header {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	gap: 10px;
+	margin-bottom: 70px;
+}
+
+.category__header-text {
+	flex: 0 1 507px;
+}
+
+.category__header-button {
+	align-self: flex-end;
+}
+
+.category__text {
+	flex: 0 1 44.433333%;
+}
+
+.category__button {
+	color: #3056D3;
+	border: 1px solid #3056D3;
+	border-radius: 4px;
+	padding: 8px 30px;
+	transition: all 0.3s ease 0s;
+	display: inline-block;
+}
+
+.category__button:hover {	
+	color: #c6cde3;
+	background-color: #3056D3;
+}
+
+.category__column {
+	display: grid;
+   grid-template-columns: repeat(3 , 1fr);
+   gap: 30px;
+}
+
+.category-card {
+	border: 1px solid #E7E7E7;
+	border-radius: 12px;
+	padding: 12px;
+}
+
+.category-card__image {
+	margin-bottom: 25px;
+}
+
+.category-card__chapter {
+	margin-bottom: 5px;
+	display: inline-block;
+	transition: color 0.3s ease 0s;
+}
+
+.category-card__chapter:hover {
+	color: #407cbc;
+}
+
+.category-card__body {
+	display: flex;
+	flex-direction: column;
+	padding: 13px;
+}
+
+.category-card__title {
+	font-size: 24px;
+	line-height: 1.25;
+	color: #212B36;
+	transition: color 0.3s ease 0s;
+}	
+
+.category-card__title:hover {
+	color: #465769;
+}
+
+/* ========================================================= */
+
+
+.page__top-collections {
+	padding-bottom: 120px;
+}
+
+.top-collections__sub-title {
+	color: #3056D3;
+	text-align: center;
+}
+
+.top-collections__column {
+	display: grid;
+	grid-template-columns: repeat(4 ,1fr);
+	gap: 30px;
+}
+
+.top-collections__title-link {
+	font-size: 20px;
+	line-height: 1.3;
+}
+
+.top-collections__body {
+	text-align: center;
+}
+
+.top-collections__sub-title {
+	margin-bottom: 8px;
+}
+
+.top-collections__button {
+	display: inline-block;
+	border: 1px solid #212B36;
+	border-radius: 4px;
+	font-size: 14px;
+	line-height: 1.43;
+	color: #212B36;
+	padding: 8px 20px;
+	transition: all 0.3s ease 0s;
+}
+
+.top-collections__button:hover {
+	color: #fff;
+	background: #212B36;
+}
+
+.top-collections__image {
+	margin-bottom: 20px;
+}
+
+.top-collections__title {
+	margin-bottom: 5px;
+}
+
+.top-collections__cost {
+	margin-bottom: 20px;
+}
+
+.cost__normal {
+	color: #212B36;
+}
+/* ========================================================= */
+
 @media (max-width: 1200px) {
 	.rating {
 		font-size: 20px;
@@ -412,9 +751,36 @@ body {
 	}
 }
 
+@media (max-width: 1098px) {
+	.card__title {
+		font-size: 18px;
+	}
+}
+
+@media (max-width: 1059px) {
+	.top-collections__title-link {
+		font-size: 17px;
+	}
+}
+
 @media (max-width: 1078px) {
 	.products-item__footer {
 		font-size: 14px;	
+	}
+}
+
+@media (max-width: 1046px) {
+	.category-card__title {
+		font-size: 21px;
+	}
+}
+
+@media (max-width: 1025px) {
+	.card__title {
+		font-size: 16px;
+	}
+	.card__cost {
+		font-size: 15px;
 	}
 }
 
@@ -424,15 +790,56 @@ body {
 	}
 }
 
+@media (max-width: 964px) {
+	.featured-item__title {
+		font-size: 23px;
+	}
+	.category__column {
+		gap: 15px;
+	}
+}
+
+@media (max-width: 948px) {
+	.collections__column {
+		grid-template-columns: repeat(2 ,1fr);
+	}
+}
+
 @media (max-width: 940px) {
-	.item__title {
+	.title-link {
 		font-size: 20px;
+	}
+	.top-collections__title-link {
+		font-size: 17px;
+	}
+	.card__title {
+		font-size: 16px;
 	}
 	.page__lates-products {
 		padding-bottom: 30px;
 		margin-bottom: 30px;
 	}
 }
+
+@media (max-width: 931px) {
+	.trending-item__title {
+		font-size: 20px;
+	}
+	.category-card,
+	.category-card__body {
+		padding: 6px;
+	}
+	.category-card__title {
+		font-size: 18px;
+	}
+}
+
+@media (max-width: 918px) {
+	.top-collections__column {
+		grid-template-columns: repeat(2 ,1fr);
+	}
+}
+
 @media (max-width: 900px) {
 	.trending-products__item {
 		padding: 15px 15px 30px;
@@ -472,12 +879,45 @@ body {
 		top: 25px;
 		left: 25px;
 	}
-	.item__title {
+	.title-link {
 		font-size: 23px;
+	}
+	.top-collections__title-link {
+		font-size: 17px;
+	}
+	.card__title {
+		font-size: 16px;
 	}
 
 	.trending-products__column {
 		grid-template-columns: repeat(2 , 1fr);
+	}
+
+	.featured__wrapper {
+		flex-direction: column;
+	}
+
+	.page__collections {
+		margin-bottom: 100px;
+	}
+	.category__column {
+		grid-template-columns: repeat(2 , 1fr);
+	}
+	.page__featured {
+		margin-bottom: 80px;
+	}
+	.page__category {
+		margin-bottom: 80px;
+	}
+}
+
+@media (max-width: 691px) {
+	.category__header {
+		gap: 20px;
+		margin-bottom: 40px;
+	}
+	.page__featured {
+		margin-bottom: 50px;
 	}
 }
 
@@ -485,7 +925,12 @@ body {
 	.latest-products__column {
 		margin-bottom: 20px;
 	}
+	.top-collections__column {
+		column-gap: 15px;
+		row-gap: 25px;
+	}
 }
+
 @media (max-width: 540px) {
 	.trending-products__column {
 		grid-template-columns: repeat(1 , 1fr);
@@ -493,12 +938,20 @@ body {
 	.page__trending-products {	
 		padding-bottom: 50px;
 	}
+}
 
+@media (max-width: 497px) {
+	.category__column {
+		grid-template-columns: repeat(1 , 1fr);
+	}
 }
 
 @media (max-width: 477px) {
 	.main {
 		margin-bottom: 50px;
+	}
+	.trending-products__item {
+		padding: 10px 10px 30px;
 	}
 }
 
@@ -507,11 +960,37 @@ body {
 		top: 10px;
 		left: 10px;
 	}
-	.item__title {
+	.title-link {
 		font-size: 20px;
 	}
 	.main__column {
 		gap: 15px;
+	}
+	.collections__column {
+		grid-template-columns: repeat(1 ,1fr);
+	}
+
+	.featured-item__body {
+		padding: 15px;
+	}
+
+	.featured-item__discount {
+		font-size: 14px;
+	}
+
+	.featured-item__chapter {
+		font-size: 14px;
+	}
+
+	.page__collections {
+		margin-bottom: 70px;
+	}
+	.top-collections__column {
+		grid-template-columns: repeat(1 ,1fr);
+	}
+	.top-collections__image,
+	.top-collections__cost {
+		margin-bottom: 15px;
 	}
 }
 
@@ -523,11 +1002,29 @@ body {
 		margin-bottom: 5px;
 		font-size: 14px;
 	}
+	.trending-item__cost {
+		margin-bottom: 5px;
+	}
+	.page__top-collections {
+		padding-bottom: 70px;
+	}
 }
 
 @media (max-width: 393px) {
-	.item__title {
-		font-size: 18px;
+	.title-link {
+		font-size: 17px;
+	}
+}
+
+@media (max-width: 354px) {
+	.page__category {
+		margin-bottom: 50px;
+	}
+}
+
+@media (max-width: 344px) {
+	.item__link {
+		font-size: 16px;
 	}
 }
 
